<resources>
    <string name="app_name">GeekBrainsTranslator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_to_translate_hint">Слово для перевода</string>
    <string name="word_to_translate_helper_text">Введите слово для перевода</string>
    <string name="result_textview">Результат поиска</string>
    <string name="history_toolbar_title">История поиска</string>
    <string name="favorite_toolbar_title">Избранное</string>
    <string name="description_toolbar_title">Подробности</string>
    <string name="transcription_title">Транскрипция:</string>
    <string name="translation_title">Перевод:</string>
    <string name="part_of_speech_title">Использование в тексте:</string>
    <string name="open_history_fragment_title">История поиска</string>
    <string name="open_favorite_fragment_title">Избранное</string>
    <string name="open_home_fragment_title">Домой</string>
    <string name="story_clear">Очистить историю</string>
    <string name="delete_item_title">Удалить запись</string>
    <string name="close_popup_menu_title">Отмена</string>
    <string name="search_in_history_title">Искать в истории запросов</string>
    <string name="search_in_history_hint">Введите слово для поиска</string>
</resources>