<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.example.utils.EquilateralImageView
        android:id="@+id/entity_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/inner_views_margin"
        tools:src="@drawable/ic_baseline_image_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transcription_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entity_transcription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="transcription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_views_margin"
        android:text="@string/translation_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entity_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="translation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_views_margin"
        android:text="@string/part_of_speech_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entity_part_of_speech_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="partOfSpeechCode" />

</LinearLayout>