<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_translation_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_translation_fragment_layout_padding"
    tools:context=".view.MainTranslationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/word_to_translate_hint"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconMode="custom"
        app:helperText="@string/word_to_translate_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/search_result_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/main_translation_fragment_margin"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_layout"
        tools:visibility="visible">

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_textview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/main_translation_rv_item" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_process_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/loading_process_margin"
            android:elevation="5dp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>